--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
 </head>
 
 <body>
-
-    <h1>Daily-Task</h1>
-    <!--Chama um Template-->
-    {{> taskList}}
-
+    <header class="container">
+        {{> header}}
+    </header>
+    <main class="container">
+        <!--Chama um Template-->
+        {{> taskList}}
+    </main>
 </body>
