--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
         {{> header}}
     </header>
     <main class="container">
+        {{> taskInsert}}
         <!--Chama um Template-->
         {{> taskList}}
     </main>
