--- a/client/taskList/taskList.html
+++ b/client/taskList/taskList.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-xs-11">
                     <!--Atributo da task-->
-                    {{data}} - {{nome}}
+                    {{dateConvert}} - {{taskName}}
                 </div>
                 <div class="col-xs-1">
                     <button type="button" class="btn btn-danger">Excluir</button>
