--- a/client/taskList/taskList.html
+++ b/client/taskList/taskList.html
@@ -9,7 +9,7 @@
                     {{dateConvert}} - {{taskName}}
                 </div>
                 <div class="col-xs-1">
-                    <button type="button" class="btn btn-danger">Excluir</button>
+                    <button name="remove" type="button" class="btn btn-danger">Remove</button>
                 </div>
             </div>
             <hr>
